--- a/css/scss/_popups.scss
+++ b/css/scss/_popups.scss
@@ -46,6 +46,7 @@
         .menu__row {
             display: flex;
             gap: 50px;
+            max-width: 1200px;
         }
 
         .menu__col {
