fix styles typo

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 @font-face {
   font-family: "Gilroy";
-  src: url("../font/Gilroy-Semibold.ttf");
+  src: url("../font/Gilroy-SemiBold.ttf");
   font-weight: 500;
 }
 * {
