--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $transition: all 0.24s ease-in-out;
 
 @font-face {
     font-family: "Gilroy";
-    src: url("../font/Gilroy-Semibold.ttf");
+    src: url("../font/Gilroy-SemiBold.ttf");
     font-weight: 500;
 }
 
