--- a/css/scss/_btns.scss
+++ b/css/scss/_btns.scss
@@ -67,12 +67,12 @@
     }
 
     &:hover {
-        background: #2a2d34 !important;
-        border-color: #2a2d34 !important;
+        background: #222429 !important;
+        border-color: #222429 !important;
 
         &.dark {
             background: #fff !important;
-            border-color: #2a2d34 !important;
+            border-color: #222429 !important;
 
             .btn-wrap {
                 .text {
