--- a/css/scss/_popups.scss
+++ b/css/scss/_popups.scss
@@ -386,10 +386,20 @@
                     opacity: 0.67;
                 }
 
-                img {
+                .slick-list,
+                .slick-track {
+                    height: 100%;
+                }
+
+                .slider-item {
                     width: 100%;
                     height: 100%;
-                    object-fit: cover;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
                 }
             }
 
@@ -419,10 +429,20 @@
                 transform: translateY(-50%);
                 left: 0;
                 width: 100%;
-                padding: 20px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                z-index: 999;
+
+                .left-arrow,
+                .right-arrow {
+                    cursor: pointer;
+                    padding: 100px 20px;
+
+                    svg {
+                        pointer-events: none;
+                    }
+                }
             }
 
             .screen-print {
@@ -529,6 +549,10 @@
                 .main-btn {
                     min-width: 238px;
 
+                    &:hover {
+                        border-color: #fff !important;
+                    }
+
                     @include sm-tablet {
                         width: 100%;
                         min-width: unset;
@@ -631,6 +655,28 @@
                     @include sm-tablet {
                         padding: 20px;
                         font-size: 20px;
+                    }
+                }
+
+                .items-arrows {
+                    position: absolute;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    left: 0;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    z-index: 999;
+
+                    .left-arrow,
+                    .right-arrow {
+                        cursor: pointer;
+                        padding: 100px 20px;
+
+                        svg {
+                            pointer-events: none;
+                        }
                     }
                 }
 
