--- a/css/scss/object-card/_object-info.scss
+++ b/css/scss/object-card/_object-info.scss
@@ -22,7 +22,7 @@
         }
 
         &.left {
-            max-width: calc(100% - 402px - 40px);
+            max-width: 693px;
 
             @include desktop {
                 max-width: 572px;
@@ -53,7 +53,11 @@
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    max-width: fit-content;
+    max-width: min-content;
+
+    @include desktop {
+        max-width: fit-content;
+    }
 
     @include sm-tablet {
         max-width: 100%;
