--- a/css/scss/object-card/_premises-cards.scss
+++ b/css/scss/object-card/_premises-cards.scss
@@ -222,6 +222,15 @@
             font-size: 13px;
             cursor: pointer;
             position: relative;
+            transition: $transition;
+
+            span {
+                cursor: pointer;
+            }
+
+            &:hover {
+                color: #2a2d34;
+            }
 
             @include sm-tablet {
                 width: 20px;
