--- a/css/scss/_popups.scss
+++ b/css/scss/_popups.scss
@@ -668,11 +668,13 @@
                     align-items: center;
                     justify-content: space-between;
                     z-index: 999;
+                    pointer-events: none;
 
                     .left-arrow,
                     .right-arrow {
                         cursor: pointer;
                         padding: 100px 20px;
+                        pointer-events: all;
 
                         svg {
                             pointer-events: none;
