--- a/css/main.scss
+++ b/css/main.scss
@@ -154,7 +154,7 @@ a {
 @import "scss/inner-page";
 @import "scss/breadcrumbs";
 @import "scss/big-breadcrumbs";
-@import "scss/titles";
+@import "scss/titles-meta";
 @import "scss/btns";
 @import "scss/margins";
 @import "scss/page404";
