--- a/css/scss/etalon/_text-wrap.scss
+++ b/css/scss/etalon/_text-wrap.scss
@@ -3,6 +3,14 @@
 
     p {
         font-size: 15px;
+        margin-bottom: 15px;
+        display: block;
+    }
+
+    img {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        display: block;
     }
 
     a {
@@ -30,6 +38,7 @@
         list-style: none;
         counter-reset: li;
         margin-bottom: 20px;
+        margin-top: 20px;
 
         li {
             font-size: 15px;
@@ -107,11 +116,5 @@
         width: 100%;
         height: auto;
         border-radius: 5px;
-    }
-
-    .p-wrap {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
     }
 }
