--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -59,6 +59,10 @@ body:has(.index-page) {
         }
     }
 
+    .cta__title {
+        margin: 0;
+    }
+
     .cta__subtitle {
         margin-top: 12px;
         margin-bottom: 40px;
