--- a/css/scss/_margins.scss
+++ b/css/scss/_margins.scss
@@ -14,3 +14,11 @@
 .mb-2 {
     margin-bottom: 20px;
 }
+
+.mt-0 {
+    margin-top: 0 !important;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
